# lab2

./: README.md  lambda-calculus.cabal
src/lib/: LC.hs
src/main/: Main.hs
