name:                lab2Solution
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     LC
  hs-source-dirs:      src/lib
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable lab2Solution-exe
  main-is:             Main.hs
  hs-source-dirs:      src/main
  build-depends:       base >=4.7 && <5, lab2Solution
  default-language:    Haskell2010